static/stylesheets/style.css
/*GENERAL SETTINGS*/

a,
a:visited {
  text-decoration: none;
  color: black;
}
li {
  list-style: none;
}

/*NAVBAR*/
.navbar {
  display: flex;
  align-items: center;
  background-color: white;
  width: 100%;
}
.nav-link {
  display: none;
}
.find-lens {
  margin-left: auto;
}


/*PRESENTATION-IMAGE*/
.presentation-image {
  color: white;
  background-image: url("../images/present.jpg");
}


/*CONTAINER*/



/*MAINBAR*/



/*SIDEBAR */



/*FOOTER*/

